--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,14 @@ after_success:
   - docker push colmnpb/multi-server
   - docker push colmnpb/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'multi-docker'
+  env: 'Multidocker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-735855350666'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
